--- a/sis.html
+++ b/sis.html
@@ -50,7 +50,7 @@
 			<div id="id1">
 				<div class="row">
 					<div class="column">
-					<img src="D:\WT\JS\sisp\10.jpg" width="400" height="400">
+					<img src=".\10.jpg" width="400" height="400">
 					<h1>03-AUG-2020</h1>
 					</div>
 					<div class="column">
